# Smoll-Chat

./: README.md  build.gradle.kts  plan.md
.github/workflows/: build.yml  build_and_release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/krishna/passwordstrengthener/: PasswordStrengthenActivity.kt  SystemPrompts.kt
app/src/main/java/com/krishna/passwordstrengthener/core/: AppServices.kt
app/src/main/java/com/krishna/passwordstrengthener/data/: StaticWeakPasswords.kt  WeakPasswordProvider.kt
app/src/main/java/com/krishna/passwordstrengthener/model/: LocalModelClient.kt  ModelRepository.kt  SmolLmLocalModelClient.kt
app/src/main/java/com/krishna/passwordstrengthener/navigation/: AppNavHost.kt  NavRoutes.kt
app/src/main/java/com/krishna/passwordstrengthener/scoring/: PasswordScoringService.kt
app/src/main/java/com/krishna/passwordstrengthener/session/: PasswordSessionRepository.kt  SessionModels.kt
app/src/main/java/com/krishna/passwordstrengthener/ui/: DashboardScreen.kt  DashboardViewModel.kt  ModelPickerScreen.kt
app/src/main/java/com/krishna/passwordstrengthener/ui/components/: AppProgressDialog.kt
app/src/main/java/com/krishna/passwordstrengthener/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: task_shortcut_icon.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-v23/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
smollm/: build.gradle.kts
smollm/src/main/cpp/: CMakeLists.txt  GGUFReader.cpp  LLMInference.cpp  LLMInference.h  smollm.cpp
smollm/src/main/java/com/krishna/smollm/: GGUFReader.kt  SmolLM.kt
